--- a/style.css
+++ b/style.css
@@ -38,8 +38,18 @@ h1 {
 }
 
 .columns{
-	border-top-color: white;
+	/*border-top-color: white;*/
+	border-collapse:collapse;
+	border-style:solid;
+	border-width:1px;
 }
+
+/*.columns td{
+	/*border-top-color: white;
+	border-style:solid;
+	border-width:1px;
+}*/
+
 
 .test0{
 	background-color: #c2d7f9;
